# neural-dna-storage-decoder

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: run_experiment.py
src/dnadecoder/: __init__.py  baselines.py  channel.py  cli.py  config.py  data.py  evaluate.py  experiment.py  metrics.py  model.py  tokens.py  train.py
src/dnadecoder/outercode/: __init__.py  galois.py  reed_solomon.py
tests/: test_baselines.py  test_channel.py  test_data.py  test_metrics.py  test_model.py  test_outercode.py
