[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-dna-decoder"
version = "0.1.0"
description = "A seq2seq Transformer that reconstructs DNA-storage strands from noisy reads, benchmarked against classical consensus and Reed-Solomon decoding."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Fikrat Talibli", email = "fikrattalibli@gmail.com" }]
keywords = ["dna-storage", "trace-reconstruction", "transformer", "reed-solomon", "error-correction", "deep-learning"]
dependencies = ["torch>=2.0", "numpy>=1.24", "matplotlib>=3.7"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
dnadecoder = "dnadecoder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
