[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-dna-decoder"
version = "0.1.0"
description = "Neural consensus for noisy DNA sequencing reads: a Transformer that learns sequence structure to denoise multiple reads better than majority voting. Includes classical baselines and a Reed-Solomon codec."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Fikrat Talibli", email = "fikrattalibli@gmail.com" }]
keywords = ["dna-sequencing", "consensus", "read-denoising", "transformer", "reed-solomon", "error-correction", "deep-learning", "metagenomics", "dna-storage"]
dependencies = ["torch>=2.0", "numpy>=1.24", "matplotlib>=3.7"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
dnadecoder = "dnadecoder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
